Request a story in progress

--- a/TellMe_Server/TellMe.Web/appsettings.Development.json
+++ b/TellMe_Server/TellMe.Web/appsettings.Development.json
@@ -5,6 +5,14 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+    },
+    "Audience": {
+      "Iss": "http://localhost:5000"
+    },
+    "Push": {
+      "Certificate": "tms_push_cert_dev.p12",
+      "Password": "TellMeAStory1`",
+      "IsProductionMode": false
     }
   }
 }
