--- a/TellMe_Server/TellMe.Web/appsettings.json
+++ b/TellMe_Server/TellMe.Web/appsettings.json
@@ -17,7 +17,12 @@
   },
   "Audience": {
     "Secret": "Y2F0Y2hlciUyMHdvbmclMjBsb3ZlJTIwLm5ldA==",
-    "Iss": "http://localhost:5000",
+    "Iss": "http://tellme-server.azurewebsites.net",
     "Aud": "TellMe.Web"
+  },
+  "Push": {
+    "Certificate": "tms_push_cert_prod.p12",
+    "Password": "TellMeAStoryProd1`",
+    "IsProductionMode": true
   }
 }
