--- a/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
@@ -169,6 +169,10 @@
       <DependentUpon>ContactsListCell.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\Router.cs" />
+    <Compile Include="ContactDetailsViewController.cs" />
+    <Compile Include="ContactDetailsViewController.designer.cs">
+      <DependentUpon>ContactDetailsViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TellMe.Core\TellMe.Core.csproj">
