--- a/TellMe_Server/TellMe.DAL/TellMe.DAL.csproj
+++ b/TellMe_Server/TellMe.DAL/TellMe.DAL.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0"/>
     <PackageReference Include="AutoMapper" Version="6.1.1"/>
+    <PackageReference Include="PushSharp" Version="4.0.10"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0"/>
