--- a/TellMe_Server/TellMe.Web/TellMe.Web.csproj
+++ b/TellMe_Server/TellMe.Web/TellMe.Web.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0"/>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0"/>
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.6.17"/>
+    <PackageReference Include="Hangfire" Version="1.6.17"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0"/>
