Fix development/production push certificates. Fix push notification title, Fix environment variables on server side Display Contact Name instead of story sender number

--- a/TellMe_Server/TellMe.Web/appsettings.Production.json
+++ b/TellMe_Server/TellMe.Web/appsettings.Production.json
@@ -6,25 +6,18 @@
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
-        "Default": "Debug",
-        "System": "Information",
-        "Microsoft": "Information"
-      }
-    },
-    "Console": {
-      "LogLevel": {
         "Default": "Warning"
       }
     }
   },
   "Audience": {
     "Secret": "Y2F0Y2hlciUyMHdvbmclMjBsb3ZlJTIwLm5ldA==",
-    "Iss": "http://192.168.0.100",
+    "Iss": "http://tellme-server.azurewebsites.net",
     "Aud": "TellMe.Web"
   },
   "Push": {
-    "Certificate": "tms_push_cert_dev.p12",
-    "Password": "TellMeAStory1`",
-    "IsProductionMode": false
+    "Certificate": "tms_push_cert_prod.p12",
+    "Password": "TMSProd1`",
+    "IsProductionMode": true
   }
 }
