pull to refresh

--- a/TellMe_Server/TellMe.Web/TellMe.Web.csproj
+++ b/TellMe_Server/TellMe.Web/TellMe.Web.csproj
@@ -20,4 +20,8 @@
   <ItemGroup>
     <ProjectReference Include="..\TellMe.DAL\TellMe.DAL.csproj"/>
   </ItemGroup>
+  <ItemGroup>
+  <!-- CopyToOutputDirectory = { Always, PreserveNewest, Never } -->
+  <Content Include="*.p12" CopyToPublishDirectory="Always" />
+</ItemGroup>
 </Project>
