restore Record video session after dismiss view, Fix preview, autoloop preview, make video thumbnail, upload video to azure, upload preview to azure, enter story title, choose recipients, send a story backend, send push notification,

--- a/TellMe_Mobile.Mobile/TellMe.iOS/Info.plist
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Info.plist
@@ -34,5 +34,9 @@
 	<string>Tell Me a Story</string>
 	<key>NSContactsUsageDescription</key>
 	<string>Tell Me a Story need an access to your contacts to find your friends</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Tell Me a Story need an access to your camera to record the stories</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Tell Me a Story need an access to your microphone to record the stories</string>
 </dict>
 </plist>
