--- a/TellMe_Server/TellMe.DAL/TellMe.DAL.csproj
+++ b/TellMe_Server/TellMe.DAL/TellMe.DAL.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0"/>
     <PackageReference Include="AutoMapper" Version="6.1.1"/>
     <PackageReference Include="PushSharp" Version="4.0.10"/>
+    <PackageReference Include="WindowsAzure.Storage" Version="8.4.0"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0"/>
