--- a/TellMe_Mobile.Mobile/TellMe.iOS/packages.config
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/packages.config
@@ -56,4 +56,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.SDWebImage" version="3.7.5" targetFramework="xamarinios10" />
 </packages>
