make request a story indepentent controller. Allow to call request a story from anywhere

--- a/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
@@ -218,6 +218,10 @@
     <Compile Include="Controllers\ImportContactsController.designer.cs">
       <DependentUpon>ImportContactsController.cs</DependentUpon>
     </Compile>
+    <Compile Include="RequestStoryViewController.cs" />
+    <Compile Include="RequestStoryViewController.designer.cs">
+      <DependentUpon>RequestStoryViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TellMe.Core\TellMe.Core.csproj">
