--- a/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
@@ -91,24 +91,18 @@
     <Reference Include="FluentValidation">
       <HintPath>..\packages\FluentValidation.7.1.1\lib\netstandard1.0\FluentValidation.dll</HintPath>
     </Reference>
-    <Reference Include="SQLitePCLRaw.core">
-      <HintPath>..\packages\SQLitePCLRaw.core.1.1.5\lib\Xamarin.iOS10\SQLitePCLRaw.core.dll</HintPath>
-    </Reference>
-    <Reference Include="SQLitePCLRaw.provider.sqlite3">
-      <HintPath>..\packages\SQLitePCLRaw.provider.sqlite3.ios_unified.1.1.5\lib\Xamarin.iOS10\SQLitePCLRaw.provider.sqlite3.dll</HintPath>
-    </Reference>
-    <Reference Include="SQLitePCLRaw.batteries_green">
-      <HintPath>..\packages\SQLitePCLRaw.bundle_green.1.1.5\lib\Xamarin.iOS10\SQLitePCLRaw.batteries_green.dll</HintPath>
-    </Reference>
-    <Reference Include="SQLitePCLRaw.batteries_v2">
-      <HintPath>..\packages\SQLitePCLRaw.bundle_green.1.1.5\lib\Xamarin.iOS10\SQLitePCLRaw.batteries_v2.dll</HintPath>
-    </Reference>
-    <Reference Include="SQLite-net">
-      <HintPath>..\packages\sqlite-net-pcl.1.4.118\lib\netstandard1.1\SQLite-net.dll</HintPath>
-    </Reference>
     <Reference Include="MonoTouch.Dialog-1" />
     <Reference Include="SDWebImage">
       <HintPath>..\packages\Xamarin.SDWebImage.3.7.5\lib\Xamarin.iOS\SDWebImage.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLiteNetStandard">
+      <HintPath>..\packages\sqlite-net-standard.1.5.1\lib\netstandard1.1\SQLiteNetStandard.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLiteNetExtensions">
+      <HintPath>..\packages\SQLiteNetExtensionsCore.2.0.0\lib\netstandard1.5\SQLiteNetExtensions.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLiteNetExtensionsAsync">
+      <HintPath>..\packages\SQLiteNetExtensionsCore.Async.2.0.0\lib\netstandard1.5\SQLiteNetExtensionsAsync.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -126,6 +120,9 @@
     <ImageAsset Include="Assets.xcassets\Account.imageset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\Account.imageset\profile%403x.png" />
     <ImageAsset Include="Assets.xcassets\Account.imageset\profile%402x.png" />
+    <ImageAsset Include="Assets.xcassets\UserPic.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\UserPic.imageset\user_pic%403x.png" />
+    <ImageAsset Include="Assets.xcassets\UserPic.imageset\user_pic%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -140,6 +137,7 @@
     <Folder Include="Controllers\" />
     <Folder Include="Assets.xcassets\Play.imageset\" />
     <Folder Include="Assets.xcassets\Account.imageset\" />
+    <Folder Include="Assets.xcassets\UserPic.imageset\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -232,6 +230,11 @@
     </Compile>
     <Compile Include="Views\CustomPopUpView.cs" />
     <Compile Include="Views\Overlay.cs" />
+    <Compile Include="UploadPictureController.cs" />
+    <Compile Include="UploadPictureController.designer.cs">
+      <DependentUpon>UploadPictureController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Core\UI\Picture.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TellMe.Core\TellMe.Core.csproj">
