--- a/TellMe_Mobile.Mobile/TellMe.iOS/packages.config
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/packages.config
@@ -6,7 +6,10 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
+  <package id="SQLiteNetExtensionsCore" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="SQLiteNetExtensionsCore.Async" version="2.0.0" targetFramework="xamarinios10" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="xamarinios10" />
+  <package id="sqlite-net-standard" version="1.5.1" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.5" targetFramework="xamarinios10" />
