Storytellers in progress

--- a/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
@@ -104,6 +104,18 @@
     <Reference Include="SQLiteNetExtensionsAsync">
       <HintPath>..\packages\SQLiteNetExtensionsCore.Async.2.0.0\lib\netstandard1.5\SQLiteNetExtensionsAsync.dll</HintPath>
     </Reference>
+    <Reference Include="SQLitePCLRaw.core">
+      <HintPath>..\packages\SQLitePCLRaw.core.1.1.8\lib\Xamarin.iOS10\SQLitePCLRaw.core.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.provider.sqlite3">
+      <HintPath>..\packages\SQLitePCLRaw.provider.sqlite3.ios_unified.1.1.8\lib\Xamarin.iOS10\SQLitePCLRaw.provider.sqlite3.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.batteries_green">
+      <HintPath>..\packages\SQLitePCLRaw.bundle_green.1.1.8\lib\Xamarin.iOS10\SQLitePCLRaw.batteries_green.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.batteries_v2">
+      <HintPath>..\packages\SQLitePCLRaw.bundle_green.1.1.8\lib\Xamarin.iOS10\SQLitePCLRaw.batteries_v2.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
@@ -117,12 +129,18 @@
     <ImageAsset Include="Assets.xcassets\Play.imageset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\Play.imageset\play%403x.png" />
     <ImageAsset Include="Assets.xcassets\Play.imageset\play%402x.png" />
-    <ImageAsset Include="Assets.xcassets\Account.imageset\Contents.json" />
-    <ImageAsset Include="Assets.xcassets\Account.imageset\profile%403x.png" />
-    <ImageAsset Include="Assets.xcassets\Account.imageset\profile%402x.png" />
     <ImageAsset Include="Assets.xcassets\UserPic.imageset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\UserPic.imageset\user_pic%403x.png" />
     <ImageAsset Include="Assets.xcassets\UserPic.imageset\user_pic%402x.png" />
+    <ImageAsset Include="Assets.xcassets\Bell.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Bell.imageset\bell%402x.png" />
+    <ImageAsset Include="Assets.xcassets\Bell.imageset\bell%403x.png" />
+    <ImageAsset Include="Assets.xcassets\Storytellers.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Storytellers.imageset\storytellers%402x.png" />
+    <ImageAsset Include="Assets.xcassets\Storytellers.imageset\storytellers%403x.png" />
+    <ImageAsset Include="Assets.xcassets\Account.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Account.imageset\profile%403x.png" />
+    <ImageAsset Include="Assets.xcassets\Account.imageset\profile%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -138,12 +156,15 @@
     <Folder Include="Assets.xcassets\Play.imageset\" />
     <Folder Include="Assets.xcassets\Account.imageset\" />
     <Folder Include="Assets.xcassets\UserPic.imageset\" />
+    <Folder Include="Assets.xcassets\Bell.imageset\" />
+    <Folder Include="Assets.xcassets\Storytellers.imageset\" />
+    <Folder Include="Assets.xcassets\Account.imageset\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
     <InterfaceDefinition Include="Main.storyboard" />
     <InterfaceDefinition Include="Auth.storyboard" />
-    <InterfaceDefinition Include="Views\Cells\ContactsListCell.xib" />
+    <InterfaceDefinition Include="Views\Cells\StorytellersListCell.xib" />
     <InterfaceDefinition Include="Views\Cells\StoriesListCell.xib" />
     <InterfaceDefinition Include="Story.storyboard" />
   </ItemGroup>
@@ -159,9 +180,9 @@
     <Compile Include="Core\UI\TextInput.cs" />
     <Compile Include="Extensions\ViewExtensions.cs" />
     <Compile Include="Core\Providers\ContactsProvider.cs" />
-    <Compile Include="Views\Cells\ContactsListCell.cs" />
-    <Compile Include="Views\Cells\ContactsListCell.designer.cs">
-      <DependentUpon>ContactsListCell.cs</DependentUpon>
+    <Compile Include="Views\Cells\StorytellersListCell.cs" />
+    <Compile Include="Views\Cells\StorytellersListCell.designer.cs">
+      <DependentUpon>StorytellersListCell.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\Router.cs" />
     <Compile Include="Core\DTO\PushNotification.cs" />
@@ -179,10 +200,6 @@
     <Compile Include="Views\CustomPicker\ModalPickerViewController.cs" />
     <Compile Include="Core\UI\Button.cs" />
     <Compile Include="Core\UI\Label.cs" />
-    <Compile Include="Controllers\ContactDetailsViewController.cs" />
-    <Compile Include="Controllers\ContactDetailsViewController.designer.cs">
-      <DependentUpon>ContactDetailsViewController.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controllers\ContactsViewController.cs" />
     <Compile Include="Controllers\ContactsViewController.designer.cs">
       <DependentUpon>ContactsViewController.cs</DependentUpon>
@@ -208,10 +225,6 @@
     <Compile Include="Controllers\StoriesListViewController.designer.cs">
       <DependentUpon>StoriesListViewController.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controllers\ImportContactsController.cs" />
-    <Compile Include="Controllers\ImportContactsController.designer.cs">
-      <DependentUpon>ImportContactsController.cs</DependentUpon>
-    </Compile>
     <Compile Include="RequestStoryViewController.cs" />
     <Compile Include="RequestStoryViewController.designer.cs">
       <DependentUpon>RequestStoryViewController.cs</DependentUpon>
@@ -235,6 +248,10 @@
       <DependentUpon>UploadPictureController.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\UI\Picture.cs" />
+    <Compile Include="StorytellersController.cs" />
+    <Compile Include="StorytellersController.designer.cs">
+      <DependentUpon>StorytellersController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TellMe.Core\TellMe.Core.csproj">
