--- a/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
@@ -168,7 +168,7 @@
     <InterfaceDefinition Include="Views\Cells\StoriesListCell.xib" />
     <InterfaceDefinition Include="Story.storyboard" />
     <InterfaceDefinition Include="Views\InputPopupView.xib" />
-    <InterfaceDefinition Include="Views\NotificationsCenterView.xib" />
+    <InterfaceDefinition Include="Views\Cells\NotificationCenterCell.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -257,9 +257,13 @@
     <Compile Include="Views\InputPopupView.designer.cs">
       <DependentUpon>InputPopupView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\NotificationsCenterView.cs" />
-    <Compile Include="Views\NotificationsCenterView.designer.cs">
-      <DependentUpon>NotificationsCenterView.cs</DependentUpon>
+    <Compile Include="Views\Cells\NotificationCenterCell.cs" />
+    <Compile Include="Views\Cells\NotificationCenterCell.designer.cs">
+      <DependentUpon>NotificationCenterCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NotificationCenterController.cs" />
+    <Compile Include="NotificationCenterController.designer.cs">
+      <DependentUpon>NotificationCenterController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
