--- a/TellMe_Server/TellMe.Web/appsettings.json
+++ b/TellMe_Server/TellMe.Web/appsettings.json
@@ -1,2 +1,5 @@
 ﻿{
+    // "ConnectionStrings": {
+    //     "DefaultConnection": "Server=tcp:mehspot.database.windows.net,1433;Initial Catalog=tellme_dev;Persist Security Info=False;User ID=jackling;Password=Mehspot01!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //   }
 }
